# URTledger

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  package_app.sh
migrations/: initial.sql
src/: db.rs  main.rs  model.rs
ui/: ui.slint
