[package]
name = "dynamic_inventory_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
slint = "1.14" # pinned to 1.14 as requested
log = "0.4"
env_logger = "0.9"

[build-dependencies]
slint-build = "1.14" # build tool version matches runtime UI version

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
